--- a/src/start_style.css
+++ b/src/start_style.css
@@ -16,7 +16,7 @@
 
 .con2 {
     display: flex;
-    width: 500px;
+    width: 60%;
     margin-left: auto;
     text-align: center;
   }
@@ -24,6 +24,7 @@
 #logo {
     height: 70px;
     padding-top: 5px;
+    padding-left: 2%;
 }
 
 .main_menu {
@@ -34,21 +35,13 @@
     width: 100%;
 }
 
-.main_menu ul {
-    display: flex;
-    width: 100%;
-}
-
-.main_menu ul li {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.main_menu ul li a{
+.main_menu a{
     width: 100%;
     display: flex;
     justify-content: center;
+    text-decoration: none;
+    color: #4F5E8E;
+    font-size: 20px;
 }
 
 .con3 {
@@ -60,3 +53,52 @@
 }
 
 
+@media screen and (max-width:1000px){ /*가로 너비가 600px 이하일 때 아래 스타일 적용*/
+    .more-btn {
+        display: block;
+        position: absolute;
+        right: 20px;
+        top: 30px;
+        width: 40px;
+        height: 40px;
+        border-radius: 8px;
+        border: none;
+        background-color: transparent;
+    }
+
+    .more-btn .icon {
+        display: block;
+        width: 24px;
+        height: 24px;
+        margin: 0 auto;
+        background: url(/public/menu-icon.png) no-repeat center;
+        background-size: contain;
+    }
+
+    .con2 {
+        visibility: hidden;
+    }
+
+    .con1 {
+        background: white;
+    }
+    
+    .con2 .main_menu {
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        padding: 0 auto;
+        width: 100%;
+        height: 100vh;
+        background: white;
+    }
+
+    .main_menu a{
+        
+        display: block;
+        margin: auto;
+        margin-bottom: 8px;
+        padding: 12px;
+    }
+}
