--- a/src/start_style.css
+++ b/src/start_style.css
@@ -1,104 +1,118 @@
-	/* 브라우저 마진과 패딩 리셋 */
-*{
-    margin: 0;
-    padding: 0;
+/* 브라우저 마진과 패딩 리셋 */
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .con1 {
-    position: fixed;
-    display: flex;
-    width: 100%;
-    height: 80px;
-    box-shadow: 0 0 4px black;
-    background: white;
-    
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 80px;
+  box-shadow: 0 0 4px black;
+  background: white;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.con2 {
-    display: flex;
-    width: 60%;
-    margin-left: auto;
-    text-align: center;
-  }
-
 #logo {
-    height: 70px;
-    padding-top: 5px;
-    padding-left: 2%;
+  height: 70px;
+  padding-left: 15px;
 }
 
 .main_menu {
-    display: flex;
-    float: left;
-    padding-top: 30px;
-    padding-right: 20px;
-    width: 100%;
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
 }
 
-.main_menu a{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-    color: #4F5E8E;
-    font-size: 20px;
+.main_menu a {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: #4f5e8e;
+  font-size: 18px;
 }
 
-.con3 {
-    padding-top: 90px;
-    height: 5000px;
-}
+.more-btn {
+    display: none;
+  }
+
 .ride {
-    display: flex;
+  display: flex;
+}
+
+/* 공간잡아주기 */
+.con2 {
+    width: 100%;
+    height: 200px;
+    background: antiquewhite;
+}
+.con3 {
+    width: 100%;
+    height: 200px;
+}
+.con4 {
+    width: 100%;
+    height: 200px;
+    background: antiquewhite;
+}
+.con5 {
+    width: 100%;
+    height: 200px;
+}
+
+.footer {
+    width: 100%;
+    height: 300px;
+    background: #4f5e8e;
 }
 
 
-@media screen and (max-width:1000px){ /*가로 너비가 600px 이하일 때 아래 스타일 적용*/
-    .more-btn {
-        display: block;
-        position: absolute;
-        right: 20px;
-        top: 30px;
-        width: 40px;
-        height: 40px;
-        border-radius: 8px;
-        border: none;
-        background-color: transparent;
-    }
 
-    .more-btn .icon {
-        display: block;
-        width: 24px;
-        height: 24px;
-        margin: 0 auto;
-        background: url(/public/menu-icon.png) no-repeat center;
-        background-size: contain;
-    }
+@media screen and (max-width: 1000px) {
+  /*가로 너비가 600px 이하일 때 아래 스타일 적용*/
+  .more-btn {
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    background-color: transparent;
+  }
 
-    .con2 {
-        visibility: hidden;
-    }
+  .more-btn .icon {
+    display: block;
+    width: 24px;
+    height: 24px;
+    margin: 0 auto;
+    background: url(/public/menu-icon.png) no-repeat center;
+    background-size: contain;
+  }
 
-    .con1 {
-        background: white;
-    }
-    
-    .con2 .main_menu {
-        position: fixed;
-        display: block;
-        top: 0;
-        left: 0;
-        padding: 0 auto;
-        width: 100%;
-        height: 100vh;
-        background: white;
-    }
+  .con1 {
+    background: white;
+  }
 
-    .main_menu a{
-        
-        display: block;
-        margin: auto;
-        margin-bottom: 8px;
-        padding: 12px;
-    }
+  .main_menu {
+    position: fixed;
+    display: block;
+    top: 0;
+    left: 0;
+    padding: 0 auto;
+    width: 100%;
+    height: 100vh;
+    background: white;
+  }
+
+  .main_menu a {
+    display: block;
+    margin: auto;
+    margin-bottom: 8px;
+    padding: 12px;
+  }
 }
