--- a/src/start_style.css
+++ b/src/start_style.css
@@ -13,6 +13,7 @@
   background: white;
   justify-content: space-between;
   align-items: center;
+  z-index: 5;
 }
 
 #logo {
@@ -47,7 +48,8 @@
 .con2 {
     width: 100%;
     height: 200px;
-    background: antiquewhite;
+    padding-top: 80px;
+    background: #EEEEEE;
 }
 .con3 {
     width: 100%;
@@ -69,6 +71,60 @@
     background: #4f5e8e;
 }
 
+.search_text {
+  padding-top: 30px;
+}
+
+.area {
+  display: flex;
+    width: 200px;
+    height: 100%;
+    -webkit-box-align: center;
+    align-items: center;
+    margin-left: 30px;
+    color: rgba(23, 75, 125, 0.6);
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.search_bor {
+  width: 780px;
+  margin: 25px auto 20px;
+  position: relative;
+  border: 3px solid rgb(36, 73, 123);
+  border-radius: 36px;
+  height: 72px;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+}
+
+.search_button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
+  right: 5px;
+  width: 38px;
+  height: 44px;
+  background: 40px no-repeat antiquewhite;
+  border-radius: 50%;
+}
+
+.Kakaomap_road {
+  width: 100%;
+  height: 2000px;
+  background: antiquewhite;
+}
+
+.content{
+  float:left;
+  width: 75%;
+}
+
+.Safe_Header {
+  padding: 15px;
+}
 
 
 @media screen and (max-width: 1000px) {
@@ -116,3 +172,4 @@
     padding: 12px;
   }
 }
+
