--- a/src/start_style.css
+++ b/src/start_style.css
@@ -2,6 +2,18 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+img {
+  transform: translateZ(0);
+  backface-visibility: hidden;
+}
+
+.con1_space {
+  height: 80px;
+  position: relative;
+  background-color: #404d75;
 }
 
 .con1 {
@@ -46,10 +58,9 @@
 
 /* 공간잡아주기 */
 .con2 {
-    width: 100%;
-    height: 200px;
-    padding-top: 80px;
-    background: #EEEEEE;
+  width: 100%;
+  height: 250px;
+   background: white;
 }
 .con3 {
     width: 100%;
@@ -72,19 +83,38 @@
 }
 
 .search_text {
-  padding-top: 30px;
+  padding-top: 50px;
+}
+
+.search_text h1 {
+  color: #404d75;
+}
+
+.location {
+  border: none;
+  background-color: transparent;
+  width: 40%;
+  display: flex;
+}
+
+.loca_icon {
+  padding-left: 10px;
+  width: 45px;
 }
 
 .area {
   display: flex;
-    width: 200px;
-    height: 100%;
-    -webkit-box-align: center;
-    align-items: center;
-    margin-left: 30px;
-    color: rgba(23, 75, 125, 0.6);
-    font-size: 18px;
-    cursor: pointer;
+  width: 35%;
+  height: 100%;
+  -webkit-box-align: center;
+  align-items: center;
+  color: rgba(23, 75, 125, 0.6);
+  font-size: 18px;
+  cursor: pointer;
+  padding-right: 10px;  
+  transform: translate(50%, 50%);
+  justify-content: center;
+  
 }
 
 .search_bor {
@@ -99,22 +129,44 @@
   align-items: center;
 }
 
+.search_space {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  padding-left: 15px;
+  
+}
+
+input:focus {
+  outline: none;
+  color: #4f5e8e;
+}
+
+input::placeholder {
+  color: #4f5e8e;
+}
+
+.divide_y {
+  height : 50px;
+  width: 2px;
+  background-color: rgb(36, 73, 123);
+}
+
 .search_button {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
-  z-index: 100;
+  transform: translateY(-60%) translateX(-30%);
   right: 5px;
   width: 38px;
-  height: 44px;
-  background: 40px no-repeat antiquewhite;
-  border-radius: 50%;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+  margin-right: 10px; 
 }
-
-.Kakaomap_road {
-  width: 100%;
-  height: 2000px;
-  background: antiquewhite;
+.search_button img {
+  width: 45px;
 }
 
 .content{
@@ -125,6 +177,8 @@
 .Safe_Header {
   padding: 15px;
 }
+
+
 
 
 @media screen and (max-width: 1000px) {
