--- a/src/Search.css
+++ b/src/Search.css
@@ -8,13 +8,28 @@
 
 .Kakaomap_road {
     width: 60%;
-    height: 2000px;
+    height: 500px;
     display: block;
     margin: 0 auto;
 }
 
 #map {
     border-radius: 5%;
+}
+
+.map_info {
+    margin: 0 auto;
+    width: 50%;
+    height: 300px;
+    border: 3px;
+    padding-top: 5%;
+}
+
+.map_info .info {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 10%;
 }
 
 
