--- a/src/start_style.css
+++ b/src/start_style.css
@@ -23,20 +23,28 @@ img {
   height: 80px;
   box-shadow: 0 0 4px black;
   background: white;
-  justify-content: space-between;
   align-items: center;
   z-index: 5;
+  justify-content: space-between;
 }
 
 #logo {
   height: 70px;
   padding-left: 15px;
+  float: left;
+}
+
+.menu {
+  width: 60%;
+  display: flex;
+  float: left;
 }
 
 .main_menu {
   display: flex;
-  width: 60%;
+  width: 100%;
   justify-content: space-between;
+  float: right;
 }
 
 .main_menu a {
@@ -46,6 +54,20 @@ img {
   text-decoration: none;
   color: #4f5e8e;
   font-size: 18px;
+}
+
+.login{
+  width: 10%;
+  margin-right: 2%;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  color: #4f5e8e;
+  font-size: 18px;
+  float: right;
+  border: 0;
+  outline: 0;
+  background-color: white;
 }
 
 .more-btn {
